Fixed footer hiding on mobile mode

--- a/layout/layout-default/index.module.scss
+++ b/layout/layout-default/index.module.scss
@@ -18,7 +18,7 @@
   display: none;
   color: $color_gray16;
 
-  @media only screen and (min-width: $breakpoint_sm) {
+  @media only screen and (min-width: $breakpoint_md) {
     display: initial;
   }
 }
